Mention possibility to provide irverse transformation to add_cs in CSM tutorial

--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -128,6 +128,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In case you only know how the reference system is oriented towards the new system, there is no need to perform any additional calculations. All of the previously shown methods provide an extra parameter to specify that the given `LocalCoordinateSystem` instance represents how the reference system is positioned in its child system. Have a look into the API documentation for further information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Transform coordinate systems to another reference system\n",
     "\n",
     "After all coordinate systems are added to the `CoordinateSystemManager`, getting a coordinate system in relation to any other reference system in form of a `LocalCoordinateSystem` class is quite easy. Simply call `get_local_coordinate_system`. The name of the system that should be transformed is passed to the function as first parameter. The second parameter is the name of the target reference system. If it is omitted, the parent system is used as reference."
