--- a/tutorials/groove_types_01.ipynb
+++ b/tutorials/groove_types_01.ipynb
@@ -31,6 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# if the package is not installed in your python environment, run this to execute the notebook directly from inside the GitHub repository\n",
     "%cd -q .."
    ]
   },
