--- a/tutorials/geometry_01_profiles.ipynb
+++ b/tutorials/geometry_01_profiles.ipynb
@@ -25,6 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# if the package is not installed in your python environment, run this to execute the notebook directly from inside the GitHub repository\n",
     "%cd -q .."
    ]
   },
