Fix CSM tutorial headers

--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -1,20 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-07-10T11:59:51.446881Z",
-     "iopub.status.busy": "2020-07-10T11:59:51.446314Z",
-     "iopub.status.idle": "2020-07-10T11:59:51.945748Z",
-     "shell.execute_reply": "2020-07-10T11:59:51.944681Z",
-     "shell.execute_reply.started": "2020-07-10T11:59:51.446801Z"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "%matplotlib widget"
+    "# Transformations Tutorial #2: the Coordinate System Manager\n",
+    "\n",
+    "## Imports¶"
    ]
   },
   {
@@ -31,7 +23,26 @@
     }
    ],
    "source": [
-    "%cd .."
+    "# if the package is not installed in your python environment, run this to execute the notebook directly from inside the GitHub repository\n",
+    "%cd -q .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-07-10T11:59:51.446881Z",
+     "iopub.status.busy": "2020-07-10T11:59:51.446314Z",
+     "iopub.status.idle": "2020-07-10T11:59:51.945748Z",
+     "shell.execute_reply": "2020-07-10T11:59:51.944681Z",
+     "shell.execute_reply.started": "2020-07-10T11:59:51.446801Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# enable interactive plots on Jupyterlab with ipympl and jupyterlab-matplotlib installed\n",
+    "# %matplotlib widget"
    ]
   },
   {
@@ -64,13 +75,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "## Introduction\n",
     "\n",
     "This tutorial is about the `CoordinateSystemManager` class of the `weldx.transformations` package. It builds upon the tutorial about coordinate systems (tutorials/transformations_01_coordinate_systems.ipynb).\n",
     "\n",
     "The purpose of the `CoordinateSystemManager` is to define and manage the relationships of different coordinate systems and their associated data in a tree-like data structure. It provides methods to transform a `LocalCoordinateSystem` or its data to an arbitrary other coordinate system.\n",
     "\n",
-    "# Construct and add coordinate systems\n",
+    "## Construct and add coordinate systems\n",
     "\n",
     "The constructor of `CoordinateSystemManager` requires the name of the root coordinate system as parameter. As optional second parameter, we can give the `CoordinateSystemManager` instance a name. If no name is provided, it will get a default name."
    ]
@@ -135,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Transform coordinate systems to another reference system\n",
+    "## Transform coordinate systems to another reference system\n",
     "\n",
     "After all coordinate systems are added to the `CoordinateSystemManager`, getting a coordinate system in relation to any other reference system in form of a `LocalCoordinateSystem` class is quite easy. Simply call `get_local_coordinate_system`. The name of the system that should be transformed is passed to the function as first parameter. The second parameter is the name of the target reference system. If it is omitted, the parent system is used as reference."
    ]
@@ -248,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Updating and deleting coordinate systems\n",
+    "## Updating and deleting coordinate systems\n",
     "\n",
     "A coordinate system can be updated by simply calling `add_cs` again with the correct reference system and an updated `LocalCoordinateSystem` instance. For example, to update the torch system, one could do the following:"
    ]
@@ -420,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment and transformation of spatial data\n",
+    "## Assignment and transformation of spatial data\n",
     "\n",
     "A coordinate system stored in the `CoordinateSystemManager` can also get spatial data assigned to it. For example, this might be a sensor positions or geometry data in form of a point clouds. In this case it becomes the data's reference system and all values refer to its coordinate origin. \n",
     "\n",
@@ -923,7 +934,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Merging and unmerging\n",
+    "## Merging and unmerging\n",
     "\n",
     "Sometimes a larger hierarchy of coordinate systems can be subdivided into multiple smaller subsystems. Defining them individually might be more intuitive and easier. For this reason, the `CoordinateSystemManager` provides the possibility to merge an instance into another one. We will introduce this functionality with a short example. \n",
     "\n",
