--- a/tutorials/timeseries_01.ipynb
+++ b/tutorials/timeseries_01.ipynb
@@ -1019,6 +1019,18 @@
    "source": [
     "plot_ts(ts)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "tests"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
