--- a/tutorials/geometry_02_geometry.ipynb
+++ b/tutorials/geometry_02_geometry.ipynb
@@ -260,7 +260,30 @@
     "Linear and radial trace segments already cover a lot of use cases but they are far from beiing enough to cover all\n",
     "possible needs.\n",
     "If you need more than those two basic segment types, there are two options.\n",
-    "The first one is to implement your own segment type."
+    "The first one is to implement your own segment type.\n",
+    "This is discussed in detail in another tutorial.\n",
+    "> TODO: Add link to tutorial once it is written\n",
+    "\n",
+    "The second option, that you should prefer is the `TODO: SOME_FANCY_NAME_SEGMENT`.\n",
+    "It enables you to describe the course of the trace segment with a mathematical function.\n",
+    "> TODO: Continue once the segment type is implemented"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Describing a 3d geometry\n",
+    "\n",
+    "The simplest possible way to describe a 3 dimensional geometry using the `weldx.geometry` package is to create a 2d \n",
+    "`Profile` and extrude it into 3d.\n",
+    "The class that performs this action is called `Geometry`.\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
