change markdown list style in quantities.ipynb

--- a/doc/developers_doc/quantities.ipynb
+++ b/doc/developers_doc/quantities.ipynb
@@ -116,12 +116,19 @@
    "source": [
     "## How `weldx` uses pint\n",
     "When importing the `weldx` package two things happen:\n",
-    "1. A default `pint.UnitRegistry` is created and imported as `weldx.constants.WELDX_UNIT_REGISTRY`.\n",
+    "- A default `pint.UnitRegistry` is created and imported as `weldx.constants.WELDX_UNIT_REGISTRY`.\n",
     "  Since all `pint` quantities must have the same base `UnitRegistry` it is important to work with the `UnitRegistry` everywhere in `weldx`.\n",
     "  All changes and modifications to the unit system are based and stored in this Registry (example: enabling use of `\"%\"` for units).\n",
-    "2. Based on the above `UnitRegistry` the `Q_` object gets created.\n",
+    "- Based on the above `UnitRegistry` the `Q_` object gets created.\n",
     "  This should be the default method when creating new quantities throughout `weldx`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
