--- a/tutorials/geometry_02_geometry.ipynb
+++ b/tutorials/geometry_02_geometry.ipynb
@@ -350,6 +350,38 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Geometries with varying cross section\n",
+    "\n",
+    "The `VariableProfile` class gives us the opportunity to handle 3 dimensional geometries with a varying cross section.\n",
+    "It can be used instead of a `Profile` during the creation of the `Geometry` class.\n",
+    "Three pieces of information are necessary to create a `VariableProfile`.\n",
+    "\n",
+    "First a list of profiles is required.\n",
+    "This list represents \"snapshots\" of known cross sections along the extrusion path.\n",
+    "\n",
+    "The second piece of information is a list of numbers that has the same number of elements as the list of profiles.\n",
+    "Each of those numbers defines a coordinate on a 1 dimensional axis for the profile with the same list index.\n",
+    "Their magnitude can be chosen arbitrarily with the exception that the first entry has to be 0 and the list items must be\n",
+    "in ascending order.\n",
+    "Due to the previously mentioned association between the coordinates/numbers and the profiles the profiles are ordered\n",
+    "by their coordinates.\n",
+    "When you pass a `VariableProfile` to a `Geometry`, its first profile is used as the initial profile at the start of\n",
+    "the `Trace` and the last as the one at the end.\n",
+    "This relation enables the `Geometry` to establish a linear coordinate transformation between the coordinates you\n",
+    "specified in the `VariableProfile` and the corresponding position on the trace.\n",
+    "For example, if you use three profiles with the coordinates `[0, 25, 100]` and your `Trace` has a length of $40 mm$,\n",
+    "then the second profile occurs after $10 mm$ on the `Trace`.  \n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
