Ignore plot functions in coverage

--- a/tutorials/geometry_02_geometry.ipynb
+++ b/tutorials/geometry_02_geometry.ipynb
@@ -459,7 +459,7 @@
     "\n",
     "You might notice that we used a interpolation function called `linear_profile_interpolation_sbs`.\n",
     "The \"sbs\" stands for \"segment-by-segment\".\n",
-    "It interpolates all of the profile segments lineary in the order as they appear in both involved profiles.\n",
+    "It interpolates all of the profile segments linearly in the order as they appear in both involved profiles.\n",
     "So you need to assure that the segments are ordered accordingly in both profiles.\n",
     "It also requires that the number of segments is identical and it only works with the `LineSegment`.\n",
     "\n",
@@ -480,7 +480,7 @@
     "the first passed `Profile`.\n",
     "In conclusion, a value of `1` represents the end of the segment and is associated with the second `Profile`.\n",
     "What you do with this information is up to you.\n",
-    "All that matters is that the funcion returns a valid `Profile` in the end.\n",
+    "All that matters is that the function returns a valid `Profile` in the end.\n",
     "\n",
     "Lets create an example interpolation that returns the first passed profile for weighting factors below `0.4` and the\n",
     "second one otherwise:"
