--- a/tutorials/geometry_02_geometry.ipynb
+++ b/tutorials/geometry_02_geometry.ipynb
@@ -11,9 +11,12 @@
     "We assume that you already know how to create 2d profiles using the `weldx` package.\n",
     "If this is not the case, please read the corresponding tutorial first.\n",
     "\n",
-    "TODO: add short summary of the tutorial\n",
+    "You will learn:\n",
+    "- about the `Trace` class\n",
+    "- how to define a 3 dimensional geometry using the `Geometry` class\n",
+    "- how to specify geometries with varying cross sections using the `VariableProfile` class\n",
     "\n",
-    "Before we start, run the following code cells to set everything up that we need."
+    "Before we start, run the following code cells to include everything we need."
    ],
    "metadata": {
     "collapsed": false
@@ -73,7 +76,7 @@
     "## Trace\n",
     "\n",
     "The `Trace` class describes an arbitrary path through the 3 dimensional space.\n",
-    "It is build from multiple segments that need to be passed to the `__init__` method of the `Trace`.\n",
+    "It is build from multiple segments that need to be passed to it when we create the `Trace`.\n",
     "Currently there are 2 segment types available: the `LinearHorizontalTraceSegment` that represents a straight line and\n",
     "the `RadialHorizontalTraceSegment` which describes a circular path.\n",
     "Both segment types have in common that the `z`-value remains constant and that they are free from torsion.\n",
@@ -130,12 +133,12 @@
    "cell_type": "markdown",
    "source": [
     "Now that we have some segments, we can create a `Trace`.\n",
-    "Its `__init__` method expects a single segment or a list of segments as first argument.\n",
+    "It expects a single segment or a list of segments as first argument.\n",
     "The individual segments get attached to each other in the same order as they are attached to the list.\n",
     "Each segment except for the first one gets its start orientation and coordinates from the end of the previous segment.\n",
     "The initial orientation and coordinates of the `Trace` can be provided in form of a `LocalCoordinateSystem` as optional\n",
-    "second argument to the `__init__` method.\n",
-    "If you omit the second parameter, the `Trace` starts at the origin and is oriented is positive x-direction.\n",
+    "second argument during the creation of the class instance.\n",
+    "If you omit the second parameter, the `Trace` starts at the origin and is oriented in positive x-direction.\n",
     "\n",
     "\n",
     "Here is an example:"
@@ -161,8 +164,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Like the `Profile` class, the `Trace` possesses a `rasterize` method.\n",
-    "We will use it to plot our `Trace`:"
+    "We can plot our `Trace` using the `plot` method:"
    ],
    "metadata": {
     "collapsed": false
@@ -196,7 +198,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Let's provide a initial coordinate system that is rotated 45 degrees around the y-axis and see how that affects the\n",
+    "Let's provide a initial coordinate system that is rotated by 45 degrees around the y-axis and see how that affects the\n",
     "result:"
    ],
    "metadata": {
@@ -256,7 +258,7 @@
     "The simplest possible way to describe a 3 dimensional geometry using the `weldx.geometry` package is to create a 2d\n",
     "`Profile` and extrude it into 3d.\n",
     "The class that performs this action is called `Geometry`.\n",
-    "Its `__init__` method expects a `Profile` that defines the cross section as first argument and a `Trace` that describes\n",
+    "It expects a `Profile` that defines the cross section as first argument and a `Trace` that describes\n",
     "the extrusion path as second one.\n",
     "Since we already have created a `Trace` all that is missing is a `Profile`.\n",
     "So let's create one:"
@@ -346,8 +348,8 @@
     "Each of those numbers defines a coordinate on a 1 dimensional axis for the profile with the same list index.\n",
     "Their magnitude can be chosen arbitrarily with the exception that the first entry has to be 0 and the list items must be\n",
     "in ascending order.\n",
-    "Due to the previously mentioned association between the coordinates/numbers and the profiles are ordered by their\n",
-    "coordinates.\n",
+    "Due to the previously mentioned association between the coordinates/numbers and the profiles, the profiles are ordered\n",
+    "by ascending coordinates.\n",
     "When you pass a `VariableProfile` to a `Geometry`, its first profile is used as the initial profile at the start of\n",
     "the `Trace` and the last as the one at the end.\n",
     "This relation enables the `Geometry` class to establish a linear coordinate transformation between the coordinates you\n",
@@ -374,7 +376,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.legend.Legend at 0x231b47ce6c8>"
+      "text/plain": "<matplotlib.legend.Legend at 0x2390d4348c8>"
      },
      "execution_count": 10,
      "metadata": {},
@@ -515,7 +517,7 @@
    "cell_type": "markdown",
    "source": [
     "Now we just create a `VariableProfile` with our new interpolation, combine it with a linear `Trace` inside of a\n",
-    "`Geometry` and plot it"
+    "`Geometry` and plot it:"
    ],
    "metadata": {
     "collapsed": false,
